--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "angular": "^1.2.21",
-    "angular-route": "^1.2.17-build.163.1"
+    "angular-route": "^1.2.17-build.163.1",
+    "yelp": "^0.1.1"
   }
 }
