--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "angular": "^1.2.21",
     "angular-route": "^1.2.17-build.163.1",
+    "body-parser": "^1.6.5",
+    "express": "^4.8.5",
     "yelp": "^0.1.1"
   }
 }
