--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0",
   "description": "",
   "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "Mai Le <lymaile@gmail.com>",
   "dependencies": {
     "body-parser": "^1.6.5",
     "express": "^4.8.5",
